# agai03-rag-cholamandalam

./: .env  .gitignore  README.md  app copy.py  app.py  main.py  pyproject.toml  requirements.txt
data/: qa_dataset.csv  qa_dataset.json
src/: chatbot.py  preprocess.py  qa_generator copy.py  qa_generator.py  retriever.py  scraper.py  utils.py  vector_store.py
